--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,11 +11,12 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
   height: 100%;
-  background-color: #f7f7f7;
 }
 
 body {
   box-sizing: border-box;
+  background-color: #f7f7f7;
+  height: 100%;
 }
 
 .container {
@@ -23,6 +24,7 @@ body {
   width: 50%;
 }
 
+/* Data styling */
 .data {
   text-align: center;
   margin-top: 5rem;
@@ -51,6 +53,7 @@ body {
 .data__value--alt {
   font-size: 2rem;
   line-height: 2.3rem;
+  color: #2c3e50;
 }
 
 .data__block {
@@ -59,13 +62,38 @@ body {
   vertical-align: top;
 }
 
+/* Navbar styles */
+.nav {
+  padding: 1rem 5rem;
+  font-size: 2rem;
+  letter-spacing: 1px;
+}
+
+.nav__link {
+  font-weight: 300;
+  text-align: left;
+  text-decoration: none !important;
+  color: #34495e;
+  transition: all 0.3s;
+  padding: 1rem;
+}
+
+.nav__link:hover {
+  color: #3498db;
+}
+
+/* Util classes */
 .u-text-sm {
   font-size: 1.5rem;
 }
 
+/* Media queries */
 @media only screen and (max-width: 550px) {
   .data__block {
     padding: 0 1rem;
+  }
+  .nav {
+    justify-content: center;
   }
 }
 
