--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,6 +83,25 @@ body {
 }
 
 /* D3 Graph */
+svg {
+  font-family: Sans-Serif, Arial;
+}
+.line {
+  stroke-width: 2;
+  fill: none;
+}
+
+.axis path {
+  stroke: black;
+}
+
+.text {
+  font-size: 12px;
+}
+
+.title-text {
+  font-size: 12px;
+}
 
 /* Util classes */
 .u-text-sm {
