--- a/public/views/tempgraph.hbs
+++ b/public/views/tempgraph.hbs
@@ -1,3 +1,6 @@
 <div class="container">
-  <div id="chart"></div>
+  <div class="heading">
+    <h1 class="data__header u-text-lg">Temperature</h1>
+  </div>
+  <svg id="chart"></svg>
 </div>
