--- a/public/views/tempgraph.hbs
+++ b/public/views/tempgraph.hbs
@@ -2,5 +2,6 @@
   <div class="heading">
     <h1 class="data__header u-text-lg">Temperature</h1>
   </div>
+  <div id="root"></div>
   <svg id="chart"></svg>
 </div>
