--- a/public/views/partials/nav.hbs
+++ b/public/views/partials/nav.hbs
@@ -1,4 +1,4 @@
 <div class="nav">
   <a class="nav__link" href="/">Home</a>
-  <a class="nav__link" href="/tempgraph">History</a>
+  <a class="nav__link" href="/tempgraph">Graph</a>
 </div>
