--- a/public/views/partials/data.hbs
+++ b/public/views/partials/data.hbs
@@ -1,8 +1,9 @@
 <section class="data">
   <div class="container">
+    {{#each data as |dataset|}}
     <div class="heading">
-      <h1 class="data__header data__header--location">{{location}}</h1>
-      <p class="data__value--alt u-text-sm">{{values.createdAt}}</p>
+      <h1 class="data__header data__header--location">{{dataset.location}}</h1>
+      <p class="data__value--alt u-text-sm">{{dataset.values.createdAt}}</p>
 
     </div>
 
@@ -11,11 +12,11 @@
         Temperature
       </h1>
       <p class="data__value">
-        {{values.temp}} &#176; C
+        {{dataset.values.temp}} &#176; C
       </p>
       {{#if values.temp_f}}
       <p class="data__value--alt">
-        ({{values.temp_f}} &#176; F)
+        ({{dataset.values.temp_f}} &#176; F)
       </p>
       {{/if}}
     </div>
@@ -23,8 +24,8 @@
       <h1 class="data__header">
         Humidity
       </h1>
-      <p class="data__value">{{values.humid}} %</p>
+      <p class="data__value">{{dataset.values.humid}} %</p>
     </div>
-
+    {{/each}}
   </div>
 </section>
