Render second graph for humidity

--- a/public/views/tempgraph.hbs
+++ b/public/views/tempgraph.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="heading">
-    <h1 class="data__header u-text-lg">Temperature</h1>
+    <h1 class="data__header u-text-lg">Temperature and Humidity</h1>
   </div>
   <div id="root"></div>
 </div>
