--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   box-sizing: border-box;
-  background-color: #f7f7f7;
+  background-color: theme-color("light");
   min-height: 100%;
 }
 
