--- a/src/styles/layout/_data.scss
+++ b/src/styles/layout/_data.scss
@@ -1,6 +1,6 @@
 .data {
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 10rem;
   line-height: 5rem;
 }
 
@@ -8,7 +8,7 @@
   font-size: 2rem;
   font-weight: 300;
   letter-spacing: 2px;
-  color: #95a5a6;
+  color: theme-color("primary");
 }
 
 .data__header--location {
@@ -20,13 +20,13 @@
   font-size: 5rem;
   font-weight: 100;
   letter-spacing: 1px;
-  color: #2c3e50;
+  color: theme-color("info");
 }
 
 .data__value--alt {
   font-size: 2rem;
   line-height: 2.3rem;
-  color: #2c3e50;
+  color: theme-color("info");
 }
 
 .data__block {
