--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @charset 'UTF-8';
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400");
 
 // 1. Configuration and helpers
 @import "abstracts/variables";
@@ -6,7 +7,11 @@
 @import "abstracts/mixins";
 @import "abstracts/media";
 
+// 7. Themes before bootstrap but after variables
+@import "themes/default";
+
 // Custom CSS framework
+@import "node_modules/bootstrap/scss/bootstrap";
 
 // 2. Vendors
 @import "vendors/normalize";
@@ -25,9 +30,9 @@
 // 5. Components
 @import "components/button";
 @import "components/graph";
+@import "components/nav";
 
 // 6. Page-specific styles
 @import "pages/home";
 
-// 7. Themes
-@import "themes/default";
+@import "vendors/util";
