--- a/src/styles/themes/_default.scss
+++ b/src/styles/themes/_default.scss
@@ -2,3 +2,12 @@
 // When having several themes, this file contains everything related to the
 // default one.
 // -----------------------------------------------------------------------------
+
+// Theme
+$theme-colors: (
+  "primary": $primary,
+  "secondary": $secondary,
+  "info": $info,
+  "light": $light,
+  "dark": $dark
+);
