--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,3 +1,121 @@
+%ball {
+  background-color: theme-color("primary");
+  border-radius: 50%;
+  font-size: 3rem;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  color: theme-color("light");
+  text-align: center;
+  line-height: 80px;
+}
+
+.menu {
+  filter: url("#goo");
+  -webkit-filter: url("#goo");
+  position: fixed;
+  top: 3rem;
+  left: 6rem;
+  height: 100%;
+  width: 80px;
+  &__checkbox {
+    display: none;
+  }
+
+  &__button {
+    @extend %ball;
+    left: 0;
+    top: 0;
+    line-height: 60px;
+    z-index: 2000;
+    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition-duration: 400ms;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  &__icon {
+    position: relative;
+    margin-top: 1rem;
+    height: 2px;
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      background-color: theme-color("light");
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      height: 3px;
+      transition: all 0.3s;
+    }
+
+    &::before {
+      top: -0.8rem;
+    }
+
+    &::after {
+      top: 0.8rem;
+    }
+  }
+
+  &__item {
+    @extend %ball;
+    left: 0;
+    top: 0;
+    transform: translate3d(0, 0, 0);
+    transition: transform ease-out 200ms;
+    z-index: 1000;
+
+    &:hover {
+      color: darken(theme-color("info"), $amount: 10);
+      background-color: theme-color("secondary");
+    }
+  }
+}
+
+.menu__checkbox:checked ~ .menu__item {
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+  @for $i from 1 through 4 {
+    &:nth-child(#{$i + 2}) {
+      transition-duration: 90ms+ (150ms * $i);
+      transform: translate3d(0, 110px * $i, 0);
+    }
+  }
+}
+
+.menu__checkbox:not(:checked) ~ .menu__item {
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+  @for $i from 1 through 4 {
+    &:nth-child(#{$i + 2}) {
+      transition-duration: 90ms+ (150ms * $i);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+}
+
+.menu__checkbox:checked + .menu__button .menu__icon {
+  background-color: transparent;
+}
+
+.menu__checkbox:checked + .menu__button .menu__icon::before {
+  top: 0;
+  transform: rotate(135deg);
+}
+
+.menu__checkbox:checked + .menu__button .menu__icon::after {
+  top: 0;
+  transform: rotate(-135deg);
+}
+
 .nav__link {
   font-weight: 300;
   text-align: left;
@@ -9,7 +127,7 @@
   letter-spacing: 1px;
 
   &:hover {
-    color: theme-color("info");
+    color: darken(theme-color("info"), $amount: 10);
     background-color: rgba(theme-color("light"), $alpha: 0.2);
     border-radius: 5px;
   }
