Update styles Change theme colors

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,10 +11,12 @@ $default-light: #e9e5e5;
 $default-dark: #15141d;
 
 $red-base-primary: #ea4961;
-$red-base-secondary: #bc3e52;
+$red-base-secondary: #e64e70;
 $red-base-info: #8293a5;
 $red-base-light: #f3f7f3;
-$red-base-dark: #221622;
+$red-base-dark: #412546;
+
+$color-blue-dark: #2f4e77;
 
 ///
 
