--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@
 @import "components/button";
 @import "components/graph";
 @import "components/nav";
+@import "components/card";
 
 // 6. Page-specific styles
 @import "pages/home";
