Update theme colors Remove raised effect on buttons

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -4,19 +4,14 @@
 
 // Colors
 
-$default-primary: #05668d;
-$default-secondary: #61a2bd;
-$default-info: #51697f;
+$default-primary: #00a0f4;
+$default-secondary: #a3abbd;
+$default-info: #61a2bd;
 $default-light: #e9e5e5;
-$default-dark: #15141d;
-
-$red-base-primary: #ea4961;
-$red-base-secondary: #e64e70;
-$red-base-info: #8293a5;
-$red-base-light: #f3f7f3;
-$red-base-dark: #412546;
+$default-dark: #033347;
 
 $color-blue-dark: #2f4e77;
+$color-red-dark: #be4a4c;
 
 ///
 
