--- a/src/styles/themes/_default.scss
+++ b/src/styles/themes/_default.scss
@@ -5,9 +5,9 @@
 
 // Theme
 $theme-colors: (
-  "primary": $red-base-primary,
-  "secondary": $red-base-secondary,
-  "info": $red-base-info,
-  "light": $red-base-light,
-  "dark": $red-base-dark
+  "primary": $default-primary,
+  "secondary": $default-secondary,
+  "info": $default-info,
+  "light": $default-light,
+  "dark": $default-dark
 );
