Update styles Install hls.js Add camera page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,7 @@
 @import "layout/header";
 @import "layout/footer";
 @import "layout/data";
+@import "layout/section";
 
 // 5. Components
 @import "components/button";
