--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,7 @@
 @import "components/graph";
 @import "components/nav";
 @import "components/card";
+@import "components/video-source";
 
 // 6. Page-specific styles
 @import "pages/home";
