--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -4,11 +4,17 @@
 
 // Colors
 
-$default-primary: #00a0f4;
-$default-secondary: #a3abbd;
-$default-info: #61a2bd;
-$default-light: #e9e5e5;
-$default-dark: #033347;
+$default-primary: #61a2bd;
+$default-secondary: #b03d56;
+$default-info: #708293;
+$default-light: #f4f7f5;
+$default-dark: #203b44;
+
+$blue-primary: #5d7f9f;
+$blue-secondary: #7c99b6;
+$blue-info: #80a6c3;
+$blue-light: #f3f3f2;
+$blue-dark: #23292e;
 
 $color-blue-dark: #2f4e77;
 $color-red-dark: #be4a4c;
