--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,12 +1,10 @@
 .card {
   border-radius: 1rem;
-  background-color: theme-color("secondary");
   color: theme-color("light");
   position: relative;
   z-index: -1;
-  &:not(:first-child) {
-    margin-top: 5rem;
-  }
+  width: 45%;
+  margin-top: 5rem;
   &__header {
     position: absolute;
     display: inline-block;
@@ -38,17 +36,18 @@
       letter-spacing: 1px;
       font-weight: 300;
       font-size: 3rem;
+      margin-bottom: 3rem;
     }
 
     &__value {
       display: inline-block;
       font-weight: 400;
       font-size: 3.3rem;
-    }
 
-    &--block {
-      &:not(:last-child) {
-        margin-top: 3rem;
+      &--description {
+        @extend .card__icon;
+        text-transform: uppercase;
+        font-size: 1.5rem;
       }
     }
   }
@@ -67,4 +66,19 @@
       font-size: 2.5rem;
     }
   }
+
+  &--red {
+    background-color: theme-color("secondary");
+  }
+
+  &--blue {
+    background-color: #5d7f9f;
+  }
+}
+
+.card--container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
