Style login page Add private routes for pages Update tests

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,6 +33,7 @@
 @import "components/nav";
 @import "components/card";
 @import "components/video-source";
+@import "components/form";
 
 // 6. Page-specific styles
 @import "pages/home";
