--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -7,3 +7,9 @@ body {
   text-align: center;
   margin-top: 3rem;
 }
+
+.message {
+  margin-top: 1.5rem;
+  font-size: 1.3rem;
+  text-transform: capitalize;
+}
