Sign and verify jwt with keyword from process.env

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -16,3 +16,11 @@
 .form__label {
   font-size: 1.3rem;
 }
+
+// .login-section {
+//   height: 100vh;
+//   width: 100vw;
+//   background-image: linear-gradient(rgba(#ccc, 0.3), rgba(#ccc, 0.3)),
+//     url("/img/login_bg.jpg");
+//   position: fixed;
+// }
